--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,13 @@ crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
 [dependencies]
-pyo3 = { version = "0.23", features = ["extension-module"] }
+pyo3 = { version = "0.23" }
+polars = { version = "0.45", features = ["lazy", "csv", "parquet"] }
+anyhow = "1.0"
+
+[features]
+extension-module = ["pyo3/extension-module"]
+default = ["extension-module"]
 
 [dev-dependencies]
 
