--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,9 @@ jobs:
         run: cargo fmt --all -- --check
       
       - name: Rust Clippy
-        run: cargo clippy --all-targets -- -D warnings
+        run: cargo clippy --all-targets --no-default-features -- -D warnings
+        env:
+          PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
       
       - name: Install Python
         uses: actions/setup-python@v5
@@ -48,7 +50,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-      - run: cargo test
+      - run: cargo test --no-default-features
+        env:
+          PYO3_USE_ABI3_FORWARD_COMPATIBILITY: 1
 
   build-wheels:
     name: Build wheels on ${{ matrix.os }}
