--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,8 @@ path = "src/lib.rs"
 
 [dependencies]
 pyo3 = { version = "0.23" }
-polars = { version = "0.45", features = ["lazy", "csv", "parquet"] }
+polars = { version = "0.46", features = ["lazy", "csv", "parquet"] }
+pyo3-polars = { version = "0.20" }
 anyhow = "1.0"
 
 [features]
