--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
         run: maturin build --release --out dist
       
       - name: Install built wheel
-        run: pip install mlprep --no-index --find-links dist --force-reinstall
+        run: pip install mlprep --find-links dist --force-reinstall
       
       - name: Import check
         run: python -c "import mlprep; print(mlprep.__version__)"
