feat(dsl): implement basic transforms (Sort, Join, GroupBy, Window)
- Add Sort, Join, GroupBy, Window structs to DSL with serde deserialization
- Implement apply_sort, apply_join, apply_groupby, apply_window in compute.rs
- Support aggregation functions: sum, mean, min, max, count, first, last, std, var
- Support window functions: sum, mean, min, max, count, cumsum, cummax, cummin
- Add 8 new DSL deserialization tests
- Add 10 new compute unit tests
- Add 6 new integration tests including complex pipeline scenarios
- Add tempfile dev dependency for integration tests

Closes: PR-05

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ extension-module = ["pyo3/extension-module"]
 default = []
 
 [dev-dependencies]
+tempfile = "3"
 
 [profile.release]
 strip = true
