feat(validate): implement validation engine with check functions
Implement PR-07: Validation Engine as specified in PLAN.md.

Key changes:
- Add validation DSL structures (Check, ColumnCheck, CheckConfig, ValidationMode)
- Add Validate step variant to Step enum
- Create src/validate.rs with:
  - validate_not_null: Check for null values
  - validate_unique: Check for duplicate values
  - validate_range: Check numeric values within bounds
  - validate_regex: Check string values match pattern
  - validate_enum: Check values in allowed set
  - run_validation: Main entry point with strict/warn/quarantine modes
  - Quarantine mode separates violating rows to separate DataFrame
- Add apply_validate in compute.rs for pipeline integration
- Add regex crate dependency
- 13 new unit tests for validation module (40 total tests pass)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ pyo3-polars = { version = "0.20" }
 anyhow = "1.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_yaml = "0.9.34"
+regex = "1.10"
 
 [features]
 extension-module = ["pyo3/extension-module"]
