--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ anyhow = "1.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_yaml = "0.9.34"
 regex = "1.10"
+serde_json = "1.0.145"
 
 [features]
 extension-module = ["pyo3/extension-module"]
