--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,10 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_yaml = "0.9.34"
 regex = "1.10"
 serde_json = "1.0.145"
+clap = { version = "4.5.53", features = ["derive"] }
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+indicatif = "0.18.3"
 
 [features]
 extension-module = ["pyo3/extension-module"]
