--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,9 @@ tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 indicatif = "0.18.3"
 
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+tikv-jemallocator = "0.6"
+
 [features]
 extension-module = ["pyo3/extension-module"]
 default = []
