--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,9 +97,7 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     needs: [linux, windows, macos, sdist]
-    environment:
-      name: pypi
-      url: https://pypi.org/p/mlprep
+    environment: 'pypi'
     permissions:
       contents: read
       id-token: write
