--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,14 +97,12 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     needs: [linux, windows, macos, sdist]
-    environment: 'pypi'
-    permissions:
-      contents: read
-      id-token: write
     steps:
       - uses: actions/download-artifact@v4
       - name: Publish to PyPI
         uses: PyO3/maturin-action@v1
+        env:
+          MATURIN_PYPI_TOKEN: ${{ secrets.MATURIN_PYPI_TOKEN }}
         with:
           command: upload
           args: --non-interactive --skip-existing wheels-*/*
