fix: Remove s390x target from release workflow
The psm crate does not support s390x architecture, causing build failures.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [x86_64, x86, aarch64, armv7, s390x, ppc64le]
+        # Note: s390x removed due to psm crate compatibility issues
+        target: [x86_64, x86, aarch64, armv7, ppc64le]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
