--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,23 +39,24 @@ jobs:
     strategy:
       matrix:
         target: [x64, x86]
+        python-version: ['3.10', '3.11', '3.12', '3.13']
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: ${{ matrix.python-version }}
           architecture: ${{ matrix.target }}
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.target }}
-          # Explicitly specify Python versions (PyO3 0.23.x supports up to 3.13)
-          args: --release --out dist -i python3.10 python3.11 python3.12 python3.13
+          # Use the installed Python interpreter
+          args: --release --out dist
           sccache: 'true'
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-windows-${{ matrix.target }}
+          name: wheels-windows-${{ matrix.target }}-py${{ matrix.python-version }}
           path: dist
 
   macos:
