chore: Rename package to mlprep-rust for PyPI availability
The name 'mlprep' was already taken on PyPI by another user.
Renamed to 'mlprep-rust' to allow publishing.
The Python module name remains 'mlprep' for end users.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = ["."]
 resolver = "2"
 
 [package]
-name = "mlprep"
+name = "mlprep-rust"
 version = "0.1.0"
 edition = "2021"
 description = "High-performance no-code data preprocessing engine"
