--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.4,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "mlprep"
+name = "mlprep-rust"
 version = "0.1.0"
 description = "High-performance no-code data preprocessing engine"
 authors = [
