fix: Explicitly define binary name as mlprep
After renaming package to mlprep-rust, the default binary name would
change. Add explicit [[bin]] section to keep CLI binary name as 'mlprep'
for user convenience and to fix test compilation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,10 @@ name = "mlprep"
 crate-type = ["cdylib", "rlib"]
 path = "src/lib.rs"
 
+[[bin]]
+name = "mlprep"
+path = "src/main.rs"
+
 [dependencies]
 pyo3 = { version = "0.23" }
 polars = { version = "0.46", features = ["lazy", "csv", "parquet", "sql"] }
