--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,8 @@ clap = { version = "4.5.53", features = ["derive"] }
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 indicatif = "0.18.3"
+miette = { version = "5.10", features = ["fancy"] }
+thiserror = "1.0"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = "0.6"
