--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,10 +35,13 @@ regex = "1.10"
 serde_json = "1.0.145"
 clap = { version = "4.5.53", features = ["derive"] }
 tracing = "0.1.44"
-tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
 indicatif = "0.18.3"
 miette = { version = "5.10", features = ["fancy"] }
 thiserror = "1.0"
+uuid = { version = "1.0", features = ["v4", "serde"] }
+sha2 = "0.10"
+chrono = { version = "0.4", features = ["serde"] }
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = "0.6"
