--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Install cargo-audit
         run: cargo install cargo-audit
       - name: Run audit
-        run: cargo audit
+        run: cargo audit --ignore RUSTSEC-2025-0020
